Cleanup (#5)
* Create ports

* Summary is still horrible

* Pt 2

* Pt 3

* Spotless

* Node optimizations

* Spotless

* Remove useless function

* Remove useless class

* Oof

* Spotless doesn't want me to be happy

* Organize stuff and resolve burnable bug

* Remove unnecessary guard

* Some cleaning

* Update

* Remove import

* Remove non consumed items

* Happy ranzu

* Bit better summary

* Burnable override mod config

* Handle provider conflicts gracefully

* Python case

* Spotless

* Port deduplication

* Bug fix, but I still don't like this class

* DeDuplicate

* Fix summary (AGAIN)